--- a/public/index.html
+++ b/public/index.html
@@ -7,37 +7,32 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site designed by GTL Company"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+   
     <title>React App</title>
+    <!-- Importa la imagen del logo -->
+    <style>
+      #logo {
+        display: none; /* Para ocultar la imagen */
+      }
+    </style>
   </head>
   <body>
+    <!-- Aquí añade la imagen del logo -->
+    <img id="logo" src="./src/logo_1/logo_1.png" alt="Logo" />
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <script>
+      // Luego, puedes obtener la ruta de la imagen desde la etiqueta img
+      var logoSrc = document.getElementById("logo").getAttribute("src");
+      // Y usar esa ruta para establecer el icono de la pestaña
+      document.querySelector("link[rel='icon']").setAttribute("href", logoSrc);
+      // También puedes establecer el ícono de Apple Touch
+      document.querySelector("link[rel='apple-touch-icon']").setAttribute("href", logoSrc);
+    </script>
   </body>
 </html>
